--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,48 @@
 ::-webkit-scrollbar{
     @apply hidden
 }
+
+/* custom-datepicker.css */
+.react-datepicker__header {
+    @apply bg-white border-b border-gray-300 shadow-md;
+  }
+  
+.react-datepicker__current-month {
+@apply text-lg font-semibold text-gray-700;
+}
+
+.react-datepicker__day--selected {
+@apply bg-blue-500 text-white rounded-full;
+}
+
+.react-datepicker__day--today {
+@apply border-2 border-blue-500;
+}
+
+.react-datepicker__month {
+@apply p-2;
+}
+
+.react-datepicker__day {
+@apply p-2 text-center rounded-md transition-colors duration-200 ease-in-out;
+}
+
+.react-datepicker__day:hover {
+@apply bg-gray-200;
+}
+
+.react-datepicker__navigation {
+@apply absolute top-2 right-2;
+}
+
+.react-datepicker__navigation--previous {
+@apply left-2;
+}
+
+.react-datepicker__navigation--next {
+@apply right-2;
+}
+
+.react-datepicker__input-container input{
+@apply cursor-pointer
+}
